# tdlib-rs

./: .gitignore  Cargo.toml
.github/workflows/: CI.yaml  github-pages.yaml
src/: dc_cache.rs  lib.rs  prime.rs  random.rs
src/aes/: error.rs  mod.rs
src/client/: client.rs  error.rs  mod.rs
src/ext/: mod.rs  mutex.rs
src/objects/: base.rs  error.rs  mod.rs  traits.rs
src/objects/mtproto_api/: mod.rs
src/objects/mtproto_api/constructors/: client_dh_inner_data.rs  mod.rs  p_q_inner_data.rs  res_pq.rs  server_dh_inner_data.rs  server_dh_params.rs
src/objects/mtproto_api/functions/: mod.rs
src/objects/mtproto_api/types/: mod.rs  res_pq.rs  rsa_public_key.rs
tdlib-rs-impl/: Cargo.toml
tdlib-rs-impl/src/: lib.rs
