[package]
name = "tdlib-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
derive_more = ">=0.99"
futures-util = ">=0.3"
rand = "0.8"
tdlib-rs-impl = { path = "tdlib-rs-impl" }
tokio = { version = ">=1.20", features = ["io-util", "net"] }
